--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -1,27 +1,49 @@
-name: Docs Pages Workflow
-on: [push, pull_request, workflow_dispatch]
-permissions:
-    contents: write
-jobs:
-  docs:
+# This is a basic workflow to help you get started with Actions
+
+name: Build-sphinx-docs
+
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs: 
+  # This workflow contains a single job called "build"
+  build: 
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      - name: Install dependencies
-        run: |
-          pip install sphinx
-          pip install sphinx sphinx_rtd_theme
-      - name: Sphinx build
-        run: |
-          cd doc/_build/
-          sphinx-build _build
-          touch .nojekill
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
         with:
-          publish_branch: master
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./doc/_build/
-          force_orphan: true
+           python-version: "3.10"
+        
+      - name: Install dependencies
+        run: | 
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Build HTML
+        run: | 
+          cd doc/
+          make html
+      - name: Run ghp-import
+        run: | 
+          ghp-import -n -p -f doc/_build/html
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
