--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -32,8 +32,7 @@ jobs:
         
       - name: Install dependencies
         run: | 
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install sphinx sphinx_rtd_theme
       - name: Build HTML
         run: | 
           cd doc/
