Íncluded some files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ understanding1.py
 understanding2.py
 w_rec.npy
 .spyproject
-FunctionRT1.py
 doc/.ipynb_checkpoints/
 .ipynb_checkpoints/
 PytoMat.m
+.opt
