--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,21 @@
 name = "Diffusion_Module"
 version = "0.1.0"
 description = "Acoustics Simulation using the Diffusion Equation"
+dependencies = [
+    "numpy<2.0.0",
+    "scipy",
+    "matplotlib<3.7.0",
+    "drawnow",
+    "gmsh",
+    "soundfile",
+    "sounddevice",
+]
+
+docs = [
+    "sphinx",
+]
+
+dev = ["Diffusion[docs]"]
 
 [build-system]
 build-backend = "flit_core.buildapi"
