--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "Diffusion_Module"
 version = "0.1.0"
 description = "Acoustics Simulation using the Diffusion Equation"
+requires-python = ">=3.10"
 dependencies = [
     "numpy<2.0.0",
     "scipy",
