--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,8 @@
 name = "Diffusion_Module"
 version = "0.1.0"
 description = "Acoustics Simulation using the Diffusion Equation"
+readme = "README.md"
+license = {file = "LICENSE.md"}
 requires-python = ">=3.10"
 dependencies = [
     "numpy<2.0.0",
@@ -19,6 +21,11 @@ docs = [
 ]
 
 dev = ["Diffusion[docs]"]
+
+[project.urls]
+Documentation = "https://building-acoustics-tu-eindhoven.github.io/Diffusion/"
+Repository = "https://github.com/building-acoustics-tu-eindhoven/Diffusion"
+
 
 [build-system]
 build-backend = "flit_core.buildapi"
