Added authors and keywords and other packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ readme = "README.md"
 license = {file = "LICENSE.md"}
 requires-python = ">=3.10"
 authors = [
-    {name = "Your name here", email = "your.email@example.com"}
+    {name = "Ilaria Fichera", email = "i.fichera@tue.nl"}
+    # {name = "Cédric Van hoorickx", email = "i.fichera@tue.nl"}
+    # {name = "Maarten Hoornikx", email = "m.c.j.hornikx@tue.nl"}
 ]
 keywords = [
     "room acoustics", 
-    "diffusion", 
+    "acoustic diffusion equation",
+    "acoustic simulations" 
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -29,6 +32,9 @@ dependencies = [
     "soundfile",
     "sounddevice",
     "pandas",
+    "sys",
+    "os",
+    "pickle",
 ]
 
 [project.optional-dependencies]
