update required packages to build docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ dependencies = [
 [project.optional-dependencies]
 docs = [
     "sphinx",
+    "sphinx-rtd-theme",
+    "myst_parser",
 ]
 
 dev = ["Diffusion[docs]"]
