--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ Auralization/auralization.wav
 doc/_build
 Diffusion_Module/FiniteVolumeMethod/absorption_coefficients.csv
 Diffusion_Module/FiniteVolumeMethod/simulation_inputs.json
+doc/Documentation1D.md
+doc/Documentation2D.md
