--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -19,6 +19,11 @@ jobs:
       with:
         python-version: '3.10'
 
+    - name: Install system dependencies for Gmsh
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libglu1-mesa
+
     - name: Install dependencies
       run: |
         pip install -e .
