--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -30,5 +30,5 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest Diffusion_Module/FiniteVolumeMethod/tests
+        pytest Diffusion_Module/FiniteVolumeMethod/tests -p no:warnings
 
