--- a/.github/workflows/python-fdm-tests.yaml
+++ b/.github/workflows/python-fdm-tests.yaml
@@ -1,4 +1,4 @@
-name: Run Python Tests
+name: Run Python FDM Tests
 
 on:
   push:
@@ -30,5 +30,5 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest Diffusion_Module/FiniteVolumeMethod/tests -p no:warnings
+        pytest Diffusion_Module/FiniteDifferenceMethod/tests -p no:warnings
 
