--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ keywords = [
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved ::  GPL-2.0 License",
+    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     "Natural Language :: English",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
@@ -26,8 +26,6 @@ classifiers = [
 dependencies = [
     "numpy<2.0.0",
     "scipy",
-    "matplotlib<3.7.0",
-    "drawnow",
     "gmsh",
     "soundfile",
     "sounddevice",
