--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "Diffusion_Module_ADE"
-version = "0.1.2"
+version = "0.1.3"
 description = "Acoustics Simulation using the Diffusion Equation"
 readme = "README.md"
 license = {file = "LICENSE.md"}
 requires-python = ">=3.10"
 authors = [
     {name = "Ilaria Fichera", email = "i.fichera@tue.nl"}
-    # {name = "Cédric Van hoorickx", email = "i.fichera@tue.nl"}
-    # {name = "Maarten Hoornikx", email = "m.c.j.hornikx@tue.nl"}
+    {name = "Cédric Van hoorickx", email = "c.m.l.van.hoorickx@tue.nl"}
+    {name = "Maarten Hoornikx", email = "m.c.j.hornikx@tue.nl"}
 ]
 keywords = [
     "room acoustics", 
