--- a/doc/pyproject.toml
+++ b/doc/pyproject.toml
@@ -1,8 +1,9 @@
-[project]
-name = "Diffusion_Module_ADE"
+﻿[project]
+name = "acousticDE"
 version = "0.1.4"
 description = "Acoustics Simulation using the Diffusion Equation"
 
 [build-system]
 build-backend = "flit_core.buildapi"
 requires = ["flit_core >=3.2,<4"]
+
